# SDH-AnimationChanger

./: .gitignore  main.py  package-lock.json
bash-daemon/: README.md  install.sh  steam-animation-daemon.sh  steam-animation-manager.service  steam-animation-suspend.sh  transition-guide.md
daemon/: Cargo.toml  README.md  install.sh
daemon/config/: default.toml
daemon/src/: animation.rs  config.rs  main.rs  steam_monitor.rs  video_processor.rs
daemon/systemd/: steam-animation-manager.service  steam-animation-manager.timer
src/: index.tsx
src/state/: index.tsx
src/types/: animation.ts
