[package]
name = "steam-animation-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Steam Animation Manager"]
description = "Native systemd daemon for Steam Deck animation management"

[[bin]]
name = "steam-animation-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
systemd = "0.10"
notify = "6.1"
futures = "0.3"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
nix = "0.27"

# Video processing
ffmpeg-next = "6.1"

# IPC and monitoring
zbus = "3.14"
inotify = "0.10"
procfs = "0.16"

[dev-dependencies]
tempfile = "3.8"